enable_testing()
set(CMAKE_LIBRARY_PATH "${CMAKE_BINARY_DIR}/external/gtest/")
message(STATUS "${CMAKE_BINARY_DIR}/external/gtest/")
find_package(GTest)
set(CMAKE_CXX_FLAGS "-std=c++11")
include_directories(${CMAKE_SOURCE_DIR}/src/)
include_directories(SYSTEM ${GTEST_INCLUDE_DIRS})
include_directories(SYSTEM ${GLM_INCLUDE_DIRS})

add_executable(terrain_test terrain_test.cpp ../src/models/terrain.cpp ../src/iobject.cpp)
target_link_libraries(terrain_test ${GTEST_BOTH_LIBRARIES} pthread)
add_test(AllTests terrain_test)
