project(tests)
enable_testing()
if (NOT GTEST_FOUND)
    find_package(GTest REQUIRED)
endif()
if (NOT GMOCK_FOUND)
    find_package(GMock REQUIRED)
endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-global-constructors -Wno-missing-prototypes")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-weak-vtables")
include_directories(${CMAKE_SOURCE_DIR}/src/)
include_directories(SYSTEM ${GTEST_INCLUDE_DIRS})
include_directories(SYSTEM ${GLM_INCLUDE_DIRS})
include_directories(SYSTEM ${GMOCK_INCLUDE_DIRS})

function(add_gtest name sources)
    add_executable(${name} ${sources} $<TARGET_OBJECTS:opengl_lib>)
    target_link_libraries(${name} ${GTEST_BOTH_LIBRARIES} ${USED_LIBRARIES})
    add_test(AllTests ${name})
endfunction()

add_gtest(terrain_test "terrain_test.cpp")
add_gtest(camera_test "camera_test.cpp")
#add_gtest(cube_test "cube_test.cpp")